[package]
name = "sshd2-config"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"

[dev-dependencies]
indoc = "1.0.4"

[build-dependencies]
quote = "1.0.16"
proc-macro2 = "1.0.36"
rustfmt = "0.10.0"
convert_case = "0.5.0"
serde = { version = "1.0.136", features = ["derive"]}
toml = "0.5.8"